--- a/webapp/index.html
+++ b/webapp/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <title>Lakshmy Shyju</title>
   <meta charset="UTF-8">
 </head>
 <body>
-	<h1>Building web application in PHP</h2>
+	<h1>Building web application in PHP</h1>
 <div>
 <p>
 These pages are intended to be explored in the 
@@ -17,7 +17,7 @@ developer console of your browser.</p>
     </p></div>
 
 <div>
-    <h1></span>Different types of links list</span></h1></h2>
+    <h1><span>Different types of links list</span></h1>
     <ul>
   <li><p>An absolute link is a full URL like
   <a href="http://www.wa4e.com">http://www.wa4e.com</a>.
